Compiler/tests/typing2/good/testfile-borrow_mut-1.rs
fn main() { let mut x = 41; let y = &mut x; *y = 42; }
